feat(oidc): Preparing authentication for app integration
